# wodouyao

./: .gitignore  CLAUDE.md  ONBOARDING.md  README.md  README_zh.md  ROADMAP.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
.wodouyao/: CLAUDE.md  workspace.json
.wodouyao/research/: omc-comparison.md  skills-acceptance.md  skills-context-brief.md  skills-design.md
.wodouyao/skills/: backend-tdd.md
assets/icons/: generated_20260417_150936_a_4x4_icon.json  generated_20260417_151133_a_4x4_icon.json  (+3 more)
scripts/: server-start.sh  server-status.sh  server-stop.sh
skills/: wodouyao.skill
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/roles/: architect.md  backend.md  designer.md  devops.md  evaluator.md  frontend.md  generator.md  notifier.md  planner.md  pm.md  qa.md  researcher.md  shell.md
src-tauri/resources/shaders/: aurora.frag  dust.frag  matrix.frag  plasma.frag  starfield.frag  wave.frag
src-tauri/resources/skills/wodouyao/: SKILL.md
src-tauri/src/: lib.rs  main.rs  shaders.rs
src-tauri/src/clones/: mod.rs
src-tauri/src/commands/: agents.rs  clones.rs  file_nodes.rs  file_preview.rs  hooks.rs  hub.rs  integrations.rs  mod.rs  notes.rs  roles.rs  settings.rs  shaders.rs  task_boards.rs  tasks.rs  team.rs  terminal.rs  web_nodes.rs  wire.rs  workspace.rs
src-tauri/src/file_nodes/: mod.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/hub/: endpoint.rs  identity.rs  keys.rs  mod.rs  server.rs  team.rs  topology.rs
src-tauri/src/integrations/: claude.rs  codex.rs  common.rs  mod.rs
src-tauri/src/notes/: mod.rs
src-tauri/src/pty/: manager.rs  session.rs  shell.rs
src-tauri/src/roles/: mod.rs
src-tauri/src/runtime/: mod.rs  tauri_impl.rs  web_impl.rs
src-tauri/src/settings/: storage.rs
src-tauri/src/skills/: commands.rs  mod.rs  storage.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/task_boards/: mod.rs
src-tauri/src/tasks/: mod.rs
src-tauri/src/web_nodes/: mod.rs
src-tauri/src/workspace/: storage.rs
src-tauri/tests/: hub_integration.rs
(+112 files in other folders)
