[package]
name = "themaestri"
version = "0.1.0"
description = "Cross-platform infinite canvas terminal orchestrator"
authors = ["you"]
edition = "2021"

[lib]
name = "themaestri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
which = "7"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
