[package]
name = "wodouyao"
version = "0.1.0"
description = "Cross-platform infinite canvas terminal orchestrator"
authors = ["you"]
edition = "2021"

[lib]
name = "wodouyao_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wodouyao"
required-features = ["tauri-runtime"]

[[bin]]
name = "wodouyao-server"
path = "src/bin/server.rs"
required-features = ["web-runtime"]

[features]
default = ["tauri-runtime"]
tauri-runtime = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:tauri-plugin-dialog",
    "dep:tauri-build",
]
web-runtime = ["dep:axum", "dep:tower-http", "dep:env_logger"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tokio = { version = "1", features = ["full"] }
which = "7"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
log = "0.4"
tiny_http = "0.12"
open = "5"
vt100 = "0.15"
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"], optional = true }
env_logger = { version = "0.11", optional = true }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
